--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      {
-  "name": "Fellah",
+{
+  "name": "fellah",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "db-on": "mkdir -p ./db && mongod --dbpath ./db",
     "db-off": "killall mongod",
-    "server-watch": "nodemon -r dotenv-safe/config server.js",
-    "server": "npm -r dotenv-safe/config server.js",
+    "server-watch": "nodemon -r dotenv-safe/config index.js",
+    "server": "npm -r dotenv-safe/config index.js",
     "client": "",
     "dev": "concurrently --kill-others-on-fail \"npm run server-watch\" \"npm run client\"",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "lint": "eslint ./",
-    "test": "jest -i --verbose --coverage --runInBand --passWithNoTests"
+                          "lint": "eslint ./",
+                          "test": "jest -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
+    "test:watch": "jest --watch           -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
+    "generate-docs": "jsdoc -c ./jsdoc.config.js"                                                                                               
   },
   "keywords": [],
   "author": "Lahcene CHAKLALA",
@@ -21,17 +26,39 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "morgan": "^1.9.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
     "dotenv-safe": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-mocha": "^6.2.2",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0",
+    "jsdoc": "^3.6.3",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
     "superagent": "^5.1.3",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "swagger-jsdoc": "^3.5.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
