--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "client": "",
     "dev": "concurrently --kill-others-on-fail \"npm run server-watch\" \"npm run client\"",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-                          "lint": "eslint ./",
-                          "test": "jest -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
+    "lint": "eslint ./",
+    "test": "jest -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
     "test:watch": "jest --watch           -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
-    "generate-docs": "jsdoc -c ./jsdoc.config.js"                                                                                               
+    "generate-docs": "jsdoc -c ./jsdoc.config.js"
   },
   "keywords": [],
   "author": "Lahcene CHAKLALA",
@@ -27,9 +27,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "firebase-admin": "^8.9.0",
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "mongoose": "^5.8.3",
+    "mongoose-paginate-v2": "^1.3.6",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
   },
