--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server:watch": "nodemon -r dotenv-safe/config index.js",
     "server": "npm -r dotenv-safe/config index.js",
     "client": "",
-    "dev": "concurrently --kill-others-on-fail \"npm run server-watch\" \"npm run client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run server:watch\" \"npm run client\"",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "lint": "eslint ./",
     "test": "jest -i --verbose --coverage --runInBand --passWithNoTests --detectOpenHandles",
@@ -23,7 +23,11 @@
   "author": "Lahcene CHAKLALA",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
+    "config": "^3.2.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -33,7 +37,8 @@
     "mongoose": "^5.8.3",
     "mongoose-paginate-v2": "^1.3.6",
     "morgan": "^1.9.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.1"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
@@ -59,8 +64,19 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "src/**/*.{js}"
+    ],
+    "testPathIgnorePatterns" : [
+      "public",
+      "src",
+      "config"
+    ],    
     "coveragePathIgnorePatterns": [
-      "/node_modules/"
+      "/node_modules/",
+      "test",
+      "public",
+      "config"
     ]
   }
 }
